# RfX-Response-Workbench

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml  requirements.lock.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260310_0001_public_release_baseline.py
backend/app/: __init__.py  cli.py  config.py  db.py  exceptions.py  main.py
backend/app/api/: deps.py
backend/app/api/routers/: cases.py  dev.py  pipeline.py  product_truth.py  session.py
backend/app/models/: __init__.py  base.py  entities.py  enums.py  vector.py
backend/app/pipeline/: __init__.py  config.py  default_profile.json
backend/app/prompts/: answer_planning.py  answer_rendering.py  case_profile.py  case_profile_extraction.py
backend/app/schemas/: answer_plan.py  api.py  case_profile.py  case_profile_extraction.py
backend/app/services/: ai.py  answer_prompting.py  answers.py  bulk_fill.py  case_profiles.py  cases.py  container.py  export_selection.py  exports.py  hashing.py  identity.py  object_keys.py  packing.py  pdf_chunks.py  pdfs.py  product_truth.py  progress.py  reproducibility.py  retrieval.py  seed.py  storage.py  workbooks.py
backend/tests/: conftest.py  seed_paths.py  test_api_e2e.py  test_bulk_fill_workflow.py  test_enum_storage.py  test_invariants.py  test_pgvector_mapping.py  test_pipeline_config.py  test_prompt_regressions.py  test_raw_trace.py  test_reproducibility.py  test_retrieval_eval.py  test_schema_guard.py  test_settings_env.py  test_windows_support.py
docs/: sample-data.md  (+8 more)
(+27 files in other folders)
