[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rfx-rag-expert-backend"
version = "0.1.0"
description = "Backend for the RfX RAG Expert application."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0",
  "fastapi>=0.116.0",
  "openai>=1.70.0",
  "openpyxl>=3.1.5",
  "pgvector>=0.3.6",
  "psycopg[binary]>=3.2.3",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.8.0",
  "pypdf>=5.4.0",
  "python-multipart>=0.0.20",
  "python-slugify>=8.0.4",
  "sqlalchemy>=2.0.39",
  "tiktoken>=0.12.0",
  "typer>=0.16.0",
  "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "mypy>=1.16.0",
  "pytest>=8.4.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.12.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "C4", "SIM"]
ignore = ["B008", "E501", "N818"]

[tool.mypy]
python_version = "3.12"
packages = ["app"]
strict = true
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = ["openpyxl", "pgvector.sqlalchemy", "pgvector.*"]
ignore_missing_imports = true
